--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
 	    <artifactId>javax.servlet-api</artifactId>
 	    <version>3.0.1</version>
 	</dependency>
+	
+	<!-- Gson -->
+	<dependency>
+		<groupId>com.google.code.gson</groupId>
+		<artifactId>gson</artifactId>
+		<version>2.8.5</version>
+	</dependency>
     
     <!-- Spring -->
     <dependency>
@@ -102,28 +109,6 @@
       <version>${org.hibernate.version}</version>
     </dependency>
     
-    <!--  Jersey  
-	<dependency>
-		<groupId>com.sun.jersey</groupId>
-		<artifactId>jersey-server</artifactId>
-		<version>1.19</version>
-	</dependency>
-	<dependency>
-   		<groupId>com.sun.jersey</groupId>
-    	<artifactId>jersey-servlet</artifactId>
-    	<version>1.19</version>
-	</dependency>
-	<dependency>
-	    <groupId>com.sun.jersey</groupId>
-	    <artifactId>jersey-json</artifactId>
-	    <version>1.19</version>
-	</dependency>
-	<dependency>
-		<groupId>org.json</groupId>
-		<artifactId>json</artifactId>
-		<version>20090211</version>
-	</dependency>-->
-
     <!-- Jackson -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
